# Convenience target, should be retired in favor of add_mlir_transform or similar
add_library(HEIRTransforms INTERFACE)

add_subdirectory(ApplyFolders)
add_subdirectory(ConvertIfToSelect)
add_subdirectory(ConvertSecretExtractToStaticExtract)
add_subdirectory(ConvertSecretForToStaticFor)
add_subdirectory(ConvertSecretInsertToStaticInsert)
add_subdirectory(ConvertSecretWhileToStaticFor)
add_subdirectory(ElementwiseToAffine)
add_subdirectory(ForwardInsertToExtract)
add_subdirectory(ForwardStoreToLoad)
add_subdirectory(FullLoopUnroll)
add_subdirectory(LinalgCanonicalizations)
add_subdirectory(MemrefToArith)
add_subdirectory(OperationBalancer)
add_subdirectory(OptimizeRelinearization)
add_subdirectory(Secretize)
add_subdirectory(StraightLineVectorizer)
add_subdirectory(TensorToScalars)
add_subdirectory(UnusedMemRef)

if(ENABLE_YOSYS)
    # TODO (#797): Support Yosys in cmake build.
    message(FATAL_ERROR "Yosys transforms not supported in CMake build yet; use Bazel instead.")
    add_subdirectory(YosysOptimizer)
endif()
