[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heir_play"
version = "0.0.4"
authors = [
  { name="Jeremy Kun", email="jkun@google.com" },
  { name="Asra Ali", email="asraa@google.com" },
]
description = "A cell magic enabling one to run HEIR pipelines in Jupyter notebooks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Topic :: Security :: Cryptography",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  # Set to 7.34.0 since that is what google colab requires. See
  # https://github.com/google/heir/pull/1021#issuecomment-2401370243
  "ipython>=7.34.0",
]

[project.urls]
Homepage = "https://github.com/google/heir"
Issues = "https://github.com/google/heir/issues"

[tool.hatch.build]
include = [
  "heir_play/**/*.py",
  "LICENSE",
  "README.md",
]
